# learngit

./: .gitignore  LICENSE  newthing  readme.txt  test10  test2.txt  vulcan.cpp
VSCODE/AHA-ALGORITHM/SortISBN/: main.cpp
VSCODE/APM/Ants/: littlefish  main.cpp
VSCODE/APM/Ants_POJ/: littlefish  main.cpp
VSCODE/APM/CoinQuestion/: littlefish  main.cpp
VSCODE/APM/DrawLots/: littlefish
VSCODE/APM/Maze/: main.cpp
VSCODE/APM/PartsAdd/: main.cpp
VSCODE/APM/StackQueueTry/: main.cpp
VSCODE/C++/AHA-ALGORITHM/Queue_UncodeQQnum/: littlefish  main.cpp
VSCODE/C++/APM/Maze/: littlefish
VSCODE/C++/C++_CFG/: tasks.json
VSCODE/C++/clong/: hello.cpp
VSCODE/C++/cmakeQuickStart/: CMakeLists.txt
VSCODE/C++/cmakeapp1/: cmake_install.cmake  main.cpp
VSCODE/C++/cmakeapp2/: CMakeCache.txt  CMakeLists.txt  main.cpp  mathfunctions.h
VSCODE/C++/cmakeapp3/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
VSCODE/C++/cmakeapp3Laptop/: main.cpp
VSCODE/C++/helloworld/: helloworld
VSCODE/C++/test/: hehe.cpp
VSCODE/clong/: hello
VSCODE/cmakeQuickStart/: CMakeLists.txt
VSCODE/cmakeapp1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile
VSCODE/cmakeapp2/: Demo  Makefile  cmake_install.cmake  main.cpp
VSCODE/cmakeapp3/: Demo  Makefile  main.cpp
VSCODE/cmakeapp3/math/: Makefile  cmake_install.cmake  mathfunctions.h
VSCODE/cmakeapp3Laptop/: CMakeLists.txt
VSCODE/cmakeapp3Laptop/math/: MathFunctions.cpp
VSCODE/cmakeapp4L/: CMakeLists.txt  main.cpp
VSCODE/cmakeapp4L/math/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
VSCODE/helloworld/: helloworld  helloworld.cpp
VSCODE/test/: cal.h  calculator.cpp  main.cpp  test  test.cpp
(+14 files in other folders)
